--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+*{
+  margin: 0;
+  font-family: "Lexend Deca", sans-serif;
+  font-optical-sizing: auto;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
