--- a/src/components/quiz/QuizPage.css
+++ b/src/components/quiz/QuizPage.css
@@ -73,23 +73,19 @@
   
   /* Conteúdo do modal */
   .modal-content {
-    background-color: white;
+    color: #ecf0f1;
+    font-size: larger;
+    font-weight: bold;
+    background-color: #262626;
     padding: 20px;
     border-radius: 8px;
-    width: 300px;
+    width: 30%;
+    height: 30%;
     text-align: center;
+    
   }
   
-  .modal button {
-    margin-top: 10px;
-    padding: 10px 20px;
-    background-color: #0078d7;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-  }
+  
   
   .modal button:hover {
     background-color: #005fa3;
@@ -101,6 +97,20 @@
     font-weight: bold;
     font-size: large;
   }
+
+  .homeBtn {
+    color: #ecf0f1;
+    background:  #3498db 90%; 
+    border-radius: 20px;
+    margin-top: 30%;
+    height: 80px;
+    width: 40%;
+    border: 0;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.3s ease, transform 0.2s ease; /* Suavidade na transição */
+}
 
 @keyframes shake {
     0% { transform: translateX(0); }
